--- a/static/files.html
+++ b/static/files.html
@@ -4,16 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File List</title>
-    <link rel="stylesheet" href="/style.css"> <!-- Use absolute path -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/style.css"> <!-- Custom styles -->
 </head>
 <body>
-    <div class="container">
-        <h1>Shared Files</h1>
+    <!-- Navbar with Dark Mode Switch -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand text-primary" href="/">EasyShares</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/files">Shared Files</a>
+                    </li>
+                </ul>
+                <!-- Dark mode toggle switch -->
+                <div class="form-check form-switch ms-3">
+                    <input class="form-check-input" type="checkbox" id="darkModeToggle">
+                    <label class="form-check-label" for="darkModeToggle">Dark Mode</label>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Shared Files Section -->
+    <div class="container mt-5">
+        <h1 class="text-center text-primary mb-4">Shared Files</h1>
         <p id="status-message">Fetching your files... Please wait.</p>
-        <div id="file-list-container">
-            <!-- File list will be rendered here dynamically -->
+        <div id="file-list-container" class="mt-4">
+            <!-- File list will be rendered dynamically -->
         </div>
     </div>
-    <script src="/fetchFiles.js" defer></script> <!-- Use absolute path -->
+
+    <footer class="footer mt-5 py-3 bg-light">
+        <div class="container text-center">
+            <small class="text-muted">Powered by EasyShares &copy; 2024</small>
+        </div>
+    </footer>
+
+    <!-- JavaScript files -->
+    <script src="/fetchFiles.js" defer></script> <!-- Existing JavaScript for fetching file list -->
+    <script src="/dark-mode.js" defer></script> <!-- Add the dark-mode script -->
 </body>
 </html>
