--- a/static/index.html
+++ b/static/index.html
@@ -1,32 +1,65 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
 <head>
     <title>Upload and Share Conveniently</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>EasyShares</h1>
-        <form id="upload-form">
-            <!-- File input container -->
-            <div id="file-input-container">
-                <input type="file" name="files" required />
+    <!-- Navbar with Dark Mode Switch -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand text-primary" href="/">EasyShares</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/files">Shared Files</a>
+                    </li>
+                </ul>
+                <!-- Dark mode toggle switch -->
+                <div class="form-check form-switch ms-3">
+                    <input class="form-check-input" type="checkbox" id="darkModeToggle">
+                    <label class="form-check-label" for="darkModeToggle">Dark Mode</label>
+                </div>
             </div>
-            <button type="button" id="add-file-button">Add Another File</button>
+        </div>
+    </nav>
+
+    <div class="container mt-5">
+        <h1 class="text-center text-primary mb-4">EasyShares</h1>
+        <form id="upload-form" class="p-4 border rounded shadow-sm">
+            <div id="file-input-container" class="mb-3">
+                <label for="file-upload" class="form-label">Select Files:</label>
+                <input type="file" name="files" class="form-control" id="file-upload" required />
+            </div>
+            <button type="button" id="add-file-button" class="btn btn-sm btn-secondary mb-3">Add Another File</button>
             <br />
-            <button type="submit">Upload</button>
+            <button type="submit" class="btn btn-primary">Upload</button>
         </form>
 
-        <!-- Progress bar container -->
-        <div id="progress-container" style="display: none;">
-            <progress id="progress-bar" max="100" value="0"></progress>
-            <span id="progress-text">0%</span>
+        <div id="progress-container" class="mt-4" style="display: none;">
+            <div class="progress">
+                <div id="progress-bar" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+            </div>
         </div>
 
-        <!-- Link container -->
-        <div id="link-container" class="link"></div>
+        <div id="link-container" class="link mt-4"></div>
     </div>
-    <script src="/script.js" defer></script>
 
+    <footer class="footer mt-5 py-3 bg-light">
+        <div class="container text-center">
+            <small class="text-muted">Powered by EasyShares &copy; 2024</small>
+        </div>
+    </footer>
+
+    <script src="/script.js" defer></script>
+    <script src="/dark-mode.js" defer></script> <!-- Add the dark-mode script -->
 </body>
 </html>
