--- a/static/files.html
+++ b/static/files.html
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <footer class="footer mt-5 py-3 bg-light">
+    <footer class="footer mt-5 py-3">
         <div class="container text-center">
             <small class="text-muted">Powered by EasyShares &copy; 2024</small>
         </div>
